TG-474 fix(side-nav): fix text alignment for longer nav item text

--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -125,7 +125,8 @@
                     -webkit-transform: rotate(-90deg);
                     transform: rotate(-90deg);
                     transition-duration: 0.3s;
-                    background: url('data:image/svg+xml;charset=utf8,<svg%20xmlns%3D "http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg" %20viewBox%3D "0%200%2012%2012" >%0A%20%20%20%20<defs>%0A%20%20%20%20%20%20%20%20<style>.cls-1%7Bfill%3A%239a9a9a%3B%7D<%2Fstyle>%0A%20%20%20%20<%2Fdefs>%0A%20%20%20%20<title>Caret<%2Ftitle>%0A%20%20%20%20<path%20class%3D "cls-1" %20d%3D "M6%2C9L1.2%2C4.2a0.68%2C0.68%2C0%2C0%2C1%2C1-1L6%2C7.08%2C9.84%2C3.24a0.68%2C0.68%2C0%2C1%2C1%2C1%2C1Z" %2F>%0A<%2Fsvg>%0A') no-repeat;
+                    background-image: url(data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cdefs%3E%0A%20%20%20%20%20%20%20%20%3Cstyle%3E.cls-1%7Bfill%3A%239a9a9a%3B%7D%3C%2Fstyle%3E%0A%20%20%20%20%3C%2Fdefs%3E%0A%20%20%20%20%3Ctitle%3ECaret%3C%2Ftitle%3E%0A%20%20%20%20%3Cpath%20class%3D%22cls-1%22%20d%3D%22M6%2C9L1.2%2C4.2a0.68%2C0.68%2C0%2C0%2C1%2C1-1L6%2C7.08%2C9.84%2C3.24a0.68%2C0.68%2C0%2C1%2C1%2C1%2C1Z%22%2F%3E%0A%3C%2Fsvg%3E%0A);
+                    background-repeat: no-repeat;
                     background-size: contain;
                     vertical-align: middle;
                     margin: 0;
